Creacion del Formulario con Angular

--- a/src/app/alert/alert.page.html
+++ b/src/app/alert/alert.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="/inicio"></ion-back-button>
     </ion-buttons>
-    <ion-title>alert</ion-title>
+    <ion-title>Alert</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,4 +13,6 @@
       <ion-title size="large">alert</ion-title>
     </ion-toolbar>
   </ion-header>
+
+
 </ion-content>
