--- a/src/app/cards/cards.page.html
+++ b/src/app/cards/cards.page.html
@@ -35,10 +35,10 @@
   </ion-card>
   <ion-card color="danger">
     <ion-card-header>
-      <ion-card-title class="custom-title">Título con estilo</ion-card-title>
+      <ion-card-title class="custom-title">TECNOLOGíAS DE LA INFORMACIÓN</ion-card-title>
     </ion-card-header>
     <ion-card-content class="custom-content">
-      Texto del contenido con color personalizado.
+      Tecnologías de la Información Área Desarrollo de Software Multiplataforma.
     </ion-card-content>
   </ion-card>
 </ion-content>
