--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -73,7 +73,7 @@
     errorText="El contraseña invalida"
     [ngModel]="password"
     password
-    name="password"
+    name="passwordd"
     required
     ></ion-input>
   </ion-item>
