--- a/src/app/alert/alert.page.html
+++ b/src/app/alert/alert.page.html
@@ -14,5 +14,11 @@
     </ion-toolbar>
   </ion-header>
 
-
+  <ion-button id="present-alert">Click </ion-button>
+  <ion-alert
+  trigger="present-alert"
+  header="ALERTA DE EMERGENCIA"
+  subHeader="Esto es solo una prueba"
+  message="No es necesario tomar alguna acción."
+></ion-alert>
 </ion-content>
