--- a/src/app/content/content.page.html
+++ b/src/app/content/content.page.html
@@ -13,4 +13,60 @@
       <ion-title size="large">content</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-content class="ion-padding">
+    <h1>Numero 1</h1>
+    <h2>Numero 2</h2>
+    <h3>Numero 3</h3>
+    <h4>Numero 4</h4>
+    <h5>Numero 5</h5>
+    <h6>Numero 6</h6>
+    <p>Serie numerica.</p>
+  </ion-content>
+
+    <ion-toolbar>
+      <ion-title> NUMEROS </ion-title>
+    </ion-toolbar>
+  <ion-content class="ion-padding">
+    <h1>Numero 10</h1>
+    <h2>Numero 20</h2>
+    <h3>Numero 30</h3>
+    <h4>Numero 40</h4>
+    <h5>Numero 50</h5>
+    <h6>Numero 60</h6>
+    <p>Series numericas.</p>
+  </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title> Decenas </ion-title>
+    </ion-toolbar>
+  </ion-footer>
+
+  <ion-header>
+    <ion-toolbar>
+      <ion-title> Header </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content [fullscreen]="true" class="ion-padding">
+    <h1>La Importancia de los Objetivos de Desarrollo Sostenible</h1>
+
+    <p>
+      Los Objetivos de Desarrollo Sostenible (ODS) son un llamado global para erradicar la pobreza, proteger el planeta y
+      garantizar que todas las personas gocen de paz y prosperidad para el año 2030. Están compuestos por 17 metas
+      interconectadas que abarcan desafíos como la igualdad de género, la acción climática, la educación de calidad y el
+      acceso a agua limpia. Estos objetivos requieren la colaboración de gobiernos, organizaciones y ciudadanos para
+      lograr un futuro más equitativo y sostenible para todos.
+    </p>
+    <p>
+      Cada acción que tomamos, por pequeña que parezca, puede contribuir a la consecución de estos objetivos. Desde
+      reducir el desperdicio de alimentos hasta optar por fuentes de energía renovables, nuestras decisiones diarias
+      impactan en el progreso colectivo. Al priorizar la sostenibilidad, no solo beneficiamos al medio ambiente, sino
+      también a las generaciones futuras, asegurando un planeta más saludable y justo para todos.
+    </p>
+  </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+      <ion-title> Footer </ion-title>
+    </ion-toolbar>
+  </ion-footer>
 </ion-content>
