--- a/src/app/input/input.page.html
+++ b/src/app/input/input.page.html
@@ -13,4 +13,34 @@
       <ion-title size="large">input</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-list>
+    <ion-item>
+      <ion-input label="PERLA LUNA"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input label="Escuela: " placeholder="Ingrese su escuela"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-list>
+      <ion-item>
+        <ion-input label="Email" type="email" placeholder="email@domain.com"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-input label="Telefono" type="tel" placeholder="000-000-0000"></ion-input>
+      </ion-item>
+    </ion-list>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-input labelPlacement="floating" value="Mujer">
+        <div slot="label">Sexo: <ion-text color="danger">(Required)</ion-text></div>
+      </ion-input>
+    </ion-item>
+  </ion-list>
 </ion-content>
